# claude-workflow

./: .gitignore  CLAUDE.md  INITIAL_EXISTING_CODE_ADD.md  README.md  TASK.md  analyze_repetitive_content.py  anthropic_claude_code_partial_documentation.md  claude_code_complete_documentation.md  core_functionality_v1.md  crawl_anthropic_docs.py  create_concatenated_docs.py  debug_hook.py  fast_ordered_crawler.py  multi_input_cli.py  multi_input_processor.py  multi_input_types.py  pyproject.toml  simple_cli.py  summary_existing_app.md  test_fast_crawler.py  test_hallucination_hook.py  test_hook_debug.py  test_hook_input.json  test_progress.py  test_with_hallucinations.py  user_guide.md
Context/: automated-hallucination-validation-workflow-plan.md  claude-code-hooks-subagents-guide.md
Docling/: README.md  document_chunker.py  document_storage.py  enhanced_markdown_processor.py  markdown_processor.py  unified_pdf_processor.py
PRPs/: multi-input-processor.md
Prompts/: Summarize_existing_code.md
anthropic_docs_crawl/: navigation_structure.json
claude_docs_final/: fast_crawl_summary.md
content/: depth0_docs-anthropic-com_en_docs_claude-code.md  depth1_docs-anthropic-com_en_docs_claude-code_amazon-bedrock.md  depth1_docs-anthropic-com_en_docs_claude-code_analytics.md  depth1_docs-anthropic-com_en_docs_claude-code_cli-reference.md  depth1_docs-anthropic-com_en_docs_claude-code_common-workflows.md  depth1_docs-anthropic-com_en_docs_claude-code_corporate-proxy.md  depth1_docs-anthropic-com_en_docs_claude-code_costs.md  (+27 more)
crawlers/: README.md  __init__.py  (+5 more)
(+59 files in other folders)
