[project]
name = "claude-workflow"
version = "2.0.0"
description = "Multi-Input Document Processor - FastOrderedCrawler with URL, PDF, and Markdown support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.4.0",
    "docling>=1.16.0",
    "python-magic>=0.4.27",
    "asyncio",
    "beautifulsoup4>=4.12.0",
    "langchain-community>=0.3.0",
    "requests",
    "pathlib",
    "pydantic>=2.0.0",
    "typing-extensions"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "mypy>=1.0.0"
]
